# mox-erc20-cu

./: justfile  pyproject.toml
contracts/: snek_token.vy
contracts/sub_lesson/: stateless_fuzz_solvable.vy
script/: deploy.py
sub_lesson/: x_stateful.py
tests/: test_stateful_snek.py  test_stateful_token.py  test_token.py
tests/sub_lesson/: test_stateless.py
