[project]
name = "moccasin_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "eth-utils>=5.1.0",
    "mamushi>=0.0.3",
    "moccasin>=0.3.6",
    "mox>=0.5.3",
    "ruff>=0.8.4",
]

[tool.moccasin.project]
src = "contracts"
dependencies = ["pcaversaccio/snekmate"]
